--- a/vtech/tienda/templates/core/compra.html
+++ b/vtech/tienda/templates/core/compra.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="es">
+  {%load static%}
+  <head>
   <title>Formulario</title>
   <!-- Estilos de Bootstrap -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
@@ -24,7 +25,7 @@
 
 
 
-<link rel="stylesheet" href="Style.css">
+<link rel="stylesheet" href="{% static 'Style.css' %}">
 
 
 <body>
@@ -32,37 +33,37 @@
 
         <!-- Barra de navegación -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="inicio.html">V-Tech</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="inicio.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="hardware.html">Hardware</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="perifericos.html">Perifericos</a>
-                </li>
-                
-                <li class="nav-item">
-                  <a class="nav-link" href="servicio.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="registro.html">Registrate</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="login.html">Iniciar Sesion</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+          <a class="navbar-brand" href="{% url 'inicio' %}">V-Tech</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url 'inicio' %}">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'hardware' %}">Hardware</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'perifericos' %}">Perifericos</a>
+              </li>
+              
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'servicio' %}">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'registro' %}">Registrate</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Iniciar Sesion</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
 
   <div class="container">
@@ -225,7 +226,7 @@
     let comuna = document.getElementById("comuna");
     comuna.addEventListener("input", validarCampos);
   </script>
-    <script crossorigin="anonymous" src="js/function.js"></script>
+    <script crossorigin="anonymous" src="{% static 'js/function.js' %}"></script>
 
 
     <div class="bottom-text" style="background-color: rgba(0, 0, 0, 0.2);">
